Met à jour le contenu de la page INDEX.html

--- a/INDEX.html
+++ b/INDEX.html
@@ -14,7 +14,7 @@
     </div> -->
 <article class="posi">
     <header>
-        <h1> Coming soon !</h1>
+        <h1> Coming soonm !</h1>
     </header>
         <p>
         We're working the development of <br> this site. Our target launch date is <strong>January <br> 2019!</strong> Sign up for updates using the form below!
